--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,4 +3,10 @@
     <string name="app_name">الطقس</string>
     <string name="title1">الطقس</string>
     <string name="title2">احوال</string>
+    <string name="next">التالي</string>
+    <string name="finish">النهاية</string>
+    <string name="home">الرئيسية</string>
+    <string name="favorites">المفضلة</string>
+    <string name="notifications">الإشعارات</string>
+    <string name="settings">الضبط</string>
 </resources>
