--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -9,4 +9,5 @@
     <string name="favorites">المفضلة</string>
     <string name="notifications">الإشعارات</string>
     <string name="settings">الضبط</string>
+    <string name="location">Location</string>
 </resources>
