--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,12 @@
     <string name="title1">Weather</string>
     <string name="title2">Forecasts</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
     <string name="home">Home</string>
     <string name="favorites">Favorites</string>
     <string name="notifications">Notifications</string>
     <string name="settings">Settings</string>
+
+    <string name="location">Location</string>
 </resources>
