--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,12 @@
     <string name="favorites">Favorites</string>
     <string name="notifications">Notifications</string>
     <string name="settings">Settings</string>
-
     <string name="location">Location</string>
+
+    <string name="pressure">Pressure</string>
+    <string name="humidity">Humidity</string>
+    <string name="wind">Wind</string>
+    <string name="cloud">Cloud</string>
+    <string name="violet">Ultra Violet</string>
+    <string name="visibility">Visibility</string>
 </resources>
