--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -10,4 +10,23 @@
     <string name="notifications">الإشعارات</string>
     <string name="settings">الضبط</string>
     <string name="location">Location</string>
+    <string name="alarm">تنبيه</string>
+    <string name="pressure">ضغط</string>
+    <string name="humidity">رطوبة</string>
+    <string name="wind">رياح</string>
+    <string name="cloud">غائم</string>
+    <string name="violet">فوق بنفسجية</string>
+    <string name="visibility">الرؤية</string>
+    <string name="alert_description">التفاصيل..</string>
+    <string name="to">إلي</string>
+    <string name="from">من</string>
+    <string name="dd_mm_yy" >يوم، شهر، سنة</string>
+    <string name="_00_00" >00:00</string>
+    <string name="events">الحدث</string>
+    <string name="rain">مطر</string>
+    <string name="snow">ثلج</string>
+    <string name="fog">ضباب</string>
+    <string name="thunderstorm">عاصفة جوية</string>
+    <string name="sound_type">نوع التنبيه</string>
+    <string name="add_alert">اضف تنبيه</string>
 </resources>
