--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="alert_description">Description..</string>
     <string name="to">To</string>
     <string name="from">From</string>
+    <string name="add">Add</string>
     <string name="dd_mm_yy" >dd_mm_yy</string>
     <string name="_00_00" >00:00</string>
     <string name="events">Event</string>
@@ -29,5 +30,5 @@
     <string name="fog">Fog</string>
     <string name="thunderstorm">Thunderstorm</string>
     <string name="sound_type">Sound Type</string>
-    <string name="add_alert">Add Alert</string>
+    <string name="add_alert">Add Alert / Notification: </string>
 </resources>
