--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,9 @@
     <string name="search_your_location">Search your location..</string>
     <string name="add_fav">Add To Favorite</string>
     <string name="set_loc">Set Location</string>
+    <string name="no_fav">No Favorites Items to show</string>
+    <string name="no_alerts">No Alerts / Notifications To show</string>
+    <string name="internetDisconnectedFav">Check Your Internet connection (cashed item)</string>
+    <string name="select_all">Please Choose An Option</string>
 
 </resources>
