handling home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="imperial">Imperial (Fahrenheit - miles/hour)</string>
     <string name="access_Gps">No gps Premission click here to grant</string>
     <string name="denied_prem">Location permission denied</string>
+    <string name="loading">Please wait, loading....</string>
 
 </resources>
