--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">الطقس</string>
-    <string name="title1">الطقس</string>
-    <string name="title2">احوال</string>
+    <string name="title1">احوال</string>
+    <string name="title2">الطقس</string>
     <string name="next">التالي</string>
     <string name="finish">النهاية</string>
     <string name="home">الرئيسية</string>
     <string name="favorites">المفضلة</string>
     <string name="notifications">الإشعارات</string>
     <string name="settings">الضبط</string>
-    <string name="location">Location</string>
+    <string name="location">الموقع:</string>
     <string name="alarm">تنبيه</string>
     <string name="pressure">ضغط</string>
     <string name="humidity">رطوبة</string>
@@ -30,12 +30,46 @@
     <string name="thunderstorm">عاصفة جوية</string>
     <string name="sound_type">نوع التنبيه</string>
     <string name="add_alert">اضف تنبيه</string>
-    <string name="language">Language</string>
+    <string name="language">اللغة:</string>
     <string name="english">English</string>
-    <string name="arabic">Arabic</string>
-    <string name="map">Map</string>
-    <string name="search_map">Search In map</string>
-    <string name="savePreferences">Save Preferences</string>
-    <string name="gps">GPS</string>
-    <string name="internetDisconnected">Internet Disconnected</string>
+    <string name="arabic">العربية</string>
+    <string name="map">خريطة</string>
+    <string name="search_map">ابحث في الخريطة</string>
+    <string name="savePreferences">حفظ</string>
+    <string name="gps">الموقع الجغرافي</string>
+    <string name="internetDisconnected">لا يوجد اتصال بالآنترنت</string>
+    <string name="turnOnLocation">تشغيل الموقع الجغرافي</string>
+    <string name="addedToFavorites">تم الإضافة إلى المفضلة</string>
+    <string name="removedFromFavorites">تم الازاله من المفضلة</string>
+    <string name="locationAlreadyInFavorites">"الموقع موجود بالفعل "</string>
+    <string name="locationSelected">تم اختيا الموقع الجغرافي</string>
+    <string name="locationIsAlreadySelected">الموقع موجود بالفعل</string>
+    <string name="locationNotFound">غير قادر علي ايجاد الموقع الحالي</string>
+    <string name="search_your_location">جاري الحصول على موقعك الحالي ..</string>
+    <string name="add_fav">اضف الي المفضلة</string>
+    <string name="set_loc">اضف الموقع الجغرافي</string>
+    <string name="no_fav">لا يوجد عناصر في المفضلة</string>
+    <string name="no_alerts">لا يوجد تنبيهات / اشعارات</string>
+    <string name="internetDisconnectedFav">تأكد من اتصالك بالآنترنت (عنصر مخزن)</string>
+    <string name="select_all">من فضلك قم بالاختيار:</string>
+    <string name="dark">الوضع الليلي</string>
+    <string name="light_mood">الوضع النهاري</string>
+    <string name="mood">الوضع:</string>
+    <string name="units">وحدات القياس:</string>
+    <string name="standard">الوحدات القياسية (كلفن - متر/ثانية)</string>
+    <string name="metric"> الوحدات المترية (درجة مئوية - متر/ثانية) </string>
+    <string name="imperial">الوحدات الإمبراطورية (فهرنهايت - ميل/ساعة)</string>
+    <string name="access_Gps"> لا يوجدإذن للموقع الجغرافي، انقر هنا للحصول</string>
+    <string name="denied_prem">تم رفض إذن الموقع الجغرافي</string>
+    <string name="loading">الرجا الانتظار، جاري التحميل...</string>
+    <string name="wentWrong">حدث خطأ ما، يرجى إعادة تشغيل التطبيق</string>
+    <string name="get_location">جاري الحصول على موقعك الحالي ..</string>
+
+    <string name="metreـsec">متر/ثانية</string>
+    <string name="hpa">باسكال</string>
+    <string name="uv">ف.ب</string>
+    <string name="km">كم</string>
+    <string name="c">م°</string>
+    <string name="k">ك°</string>
+    <string name="f">ف°</string>
 </resources>
