--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,10 @@
     <string name="changeUnit">"Units have been change to: "</string>
     <string name="complete">Please Fill the missing fields</string>
     <string name="openSittings">Open Sittings</string>
+    <string name="channel_name">channelName</string>
+    <string name="channel_description">channelDesc</string>
+    <string name="datInterval">Please choose a valid date range</string>
+    <string name="timeInterval">Please choose a valid time range</string>
+    <string name="timePassed">Can\'t choose time that have already passed</string>
 
 </resources>
