--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -80,4 +80,5 @@
     <string name="changeUnit">" تم تغيير وحدة القياس إلى:  "</string>
     <string name="complete">قم بملئ الخانات الفارغة</string>
     <string name="openSittings">اذهب للإعدادت</string>
+    <string name="timeInterval">من فضلك اختر فترة زمنية صالحة</string>
 </resources>
