--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,8 +85,6 @@
     <string name="openSittings">Open Sittings</string>
     <string name="channel_name">channelName</string>
     <string name="channel_description">channelDesc</string>
-    <string name="datInterval">Please choose a valid date range</string>
-    <string name="timeInterval">Please choose a valid time range</string>
-    <string name="timePassed">Can\'t choose time that have already passed</string>
+    <string name="timeInterval">Please choose a valid time and date ranges</string>
 
 </resources>
